Assignment 2/module_security_group/sec_grp.tf



resource "aws_security_group" "tf-sg1"{
  name        ="${var.sgname}"
  description = "Allow ssh http icmp inbound traffic"
  vpc_id      = "${var.vpcid}"

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags={
      Name="${var.sgname}"
  }
}
